--- a/SimpleWeather.Windows/Controls/DetailItem.xaml
+++ b/SimpleWeather.Windows/Controls/DetailItem.xaml
@@ -49,13 +49,14 @@
                 Grid.Row="0"
                 Grid.RowSpan="2"
                 Grid.Column="0"
-                Width="48"
-                Height="40"
                 Margin="8,0"
+                Padding="8,0"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center"
                 ForceBitmapIcon="True"
                 Foreground="{ThemeResource IconPaintColorBrush}"
+                IconHeight="48"
+                IconWidth="48"
                 RenderTransformOrigin="0.5,0.5"
                 ShowAsMonochrome="False"
                 WeatherIcon="{x:Bind Details.Icon, Mode=OneWay}">
