--- a/SimpleWeather.Windows/Themes/Styles.xaml
+++ b/SimpleWeather.Windows/Themes/Styles.xaml
@@ -19,6 +19,7 @@
     <converters:ColorToSolidColorBrushConverter x:Key="solidColorBrush2ColorConverter" IsInverse="True" />
     <converters:BooleanToGridLengthConverter x:Key="bool2GridLengthConverter" />
     <converters:BooleanToGridLengthConverter x:Key="inverseBool2GridLengthConverter" IsInverse="True" />
+    <converters:NullableToVisibilityConverter x:Key="null2VisibilityConverter" />
     <toolkitConverters:BoolToVisibilityConverter x:Key="booleanToVisibilityConverter" />
     <toolkitConverters:StringVisibilityConverter x:Key="stringVisibilityConverter" />
     <toolkitConverters:EmptyCollectionToObjectConverter
